# MLOps_Full_Project

./: .coverage  README.md  main.py  pyproject.toml  report.html
.history/: pyproject_20251026160342.toml  pyproject_20251026160724.toml  pyproject_20251029000741.toml  pyproject_20251029012853.toml
.history/src/data_loader/: data_loader_20251026164624.py
.history/src/data_preprocessing/: data_preprocessor_20251029000443.py
.history/tests/test_data_loader/: test_data_loader_20251026230853.py
.history/tests/test_data_preprocessing/: conftest_20251029005053.py  conftest_20251029011622.py  test_data_preprocessor_20251029005050.py  test_data_preprocessor_20251029005150.py
.history/tests/test_datasets/: test_config_20251027152317.yaml
src/model_training/: __init__.py  custom_models.py  model_trainer.py
tests/model_training/: conftest.py  test_model_trainer.py  test_model_trainer_custom_models.py  test_model_trainer_integration.py  test_utils.py
